# media-scribe

./: .gitignore  .pre-commit-config.yaml  config.yml  setup.cfg  setup.py
src/bnMediaScribe/: ImageVideoScribe.py  LlamaTextScribe.py  MediaScribeConfig.py  __init__.py  utils.py
src/bnMediaScribe/scripts/: __init__.py  run_scribe_image.py  run_scribe_image2image.py  run_scribe_text.py
