[metadata]
name = my_project  # Name of the project, replace with your actual project name
version = 0.1.0
description = A short description of the project
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name

[nosetests]
where = ../tests/
stop = FALSE
verbosity = 2
nocapture = TRUE
logging-level = INFO
detailed-errors = 1
