[metadata]
name = media_scribe
version = 0.1.0
description = framework that integrates and manages settings for generating text and images using Llama language models and Stable Diffusion image models.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name

[nosetests]
where = ../tests/
stop = FALSE
verbosity = 2
nocapture = TRUE
logging-level = INFO
detailed-errors = 1
